--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,7 @@ repositories {
 }
 
 dependencies {
-	compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
-    compile 'org.springframework:spring-context:3.1.1.RELEASE'
-    compile 'org.springframework:spring-core:3.1.1.RELEASE'
-    compile 'org.springframework:spring-tx:3.1.1.RELEASE'
-    compile 'org.springframework:spring-orm:3.1.1.RELEASE'
-    compile 'org.apache.struts:struts2-spring-plugin:2.3.1.2'
-    compile 'org.apache.struts:struts2-core:2.3.1.2'
+    compile 'org.hibernate:hibernate-core:4.1.6.Final'
+    compile 'br.com.caelum:vraptor:3.4.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
