--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 apply plugin : 'java'
 apply plugin : 'eclipse'
 
+buildDir = "/home/IDEAIS/fabiano.silva/projetosGit/sadta/WebContent/WEB-INF/classes"
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-    compile 'org.hibernate:hibernate-core:4.1.6.Final'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
     compile 'br.com.caelum:vraptor:3.4.1'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
