--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,6 @@ repositories {
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
     compile 'br.com.caelum:vraptor:3.4.1'
+    compile 'jstl:jstl:1.2';
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
