--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
     compile 'br.com.caelum:vraptor:3.4.1'
     compile 'jstl:jstl:1.2';
+    compile 'mysql:mysql-connector-java:5.1.21';
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
