--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '3.6.7.Final'
+    compile 'org.hibernate:hibernate-core:3.5.6-Final'
+    compile 'org.hibernate:hibernate-annotations:3.5.6-Final'
     compile 'br.com.caelum:vraptor:3.4.1'
-    compile 'jstl:jstl:1.2';
-    compile 'mysql:mysql-connector-java:5.1.21';
+    compile 'jstl:jstl:1.2'
+    compile 'mysql:mysql-connector-java:5.1.21'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
